@@ -1,3 +1,8 @@
+2017-11-14  Joseph Myers  <joseph@codesourcery.com>
+
+	* string/bug-strncat1.c: Include <libc-diag.h>.
+	(main): Disable -Wstringop-truncation for strncat call for GCC 8.
+
 2018-06-14  Joseph Myers  <joseph@codesourcery.com>
 
 	* string/tester.c (test_strncat) [__GNUC_PREREQ (7, 0)]: Also
